Add sentence to BAMM section in Introduction

--- a/mc3.tex
+++ b/mc3.tex
@@ -250,6 +250,10 @@ The advantage of using MCMC
 is that BAMM does not produce a single best configuration,
 but rather a set of configurations and their probability
 of explaining the shape or data of the tree \citep{rab14plos}.
+%
+Therefore, if multiple shift configurations
+explain the phylogenetic data similarly well,
+they will be sampled at about the same frequency.
 
 
 \subsection*{Metropolis coupled MCMC}
