--- a/mc3.tex
+++ b/mc3.tex
@@ -722,7 +722,11 @@ would have taken 75.2 (3.1 d) and 150.5 hr (6.3 d).
 % Where appropriate, set out recommendations for management or policy
 \section*{Discussion}
 
-The discussion will go here.
+We have found that Metropolis-coupled MCMC improves
+the overall performance of BAMM analyses.
+%
+In order to unbiased results,
+it is important that samples be indepentent.
 
 
 \section*{Acknowledgements}
