Change uppercase figure labels to lowercase

--- a/mc3.tex
+++ b/mc3.tex
@@ -635,7 +635,7 @@ These results indicate that \MCMCMC\ improved mixing.
 \includegraphics[width=14cm]{eff-size.pdf}
 \end{center}
 \caption{Effective sizes of the log-likelihood for
-    (A) runs of 100 simulated trees and (B) 25 runs of the skink tree.
+    (a) runs of 100 simulated trees and (b) 25 runs of the skink tree.
     Runs are sorted by their effective size.}
 \label{fig:eff-size}
 \end{figure}
