Explain cap on effective size and update results

--- a/mc3.tex
+++ b/mc3.tex
@@ -619,10 +619,14 @@ For both the simulated trees and the empirical tree,
 we found that runs with \MCMCMC\ had higher effective size
 than those without it (Figure~\ref{fig:eff-size}).
 %
+Fewer than 5\% of runs had effective sizes
+greater than the number of samples (800),
+so these runs' effective sizes were set to 800.
+%
 For the simulated trees,
 the mean effective size (and 95\% bootstrap confidence interval)
-with four and eight chains was 548 (493--601) and 555 (496--613),
-whereas with one chain it was 402 (334--468).
+with four and eight chains was 543 (488--596) and 542 (485--597),
+whereas with one chain it was 398 (334--463).
 %
 For the skink tree, the mean effective size
 with four chains and eight chains was 601 (559--642) and 670 (636--703),
