Don't allow line break between Figure and number

--- a/mc3.tex
+++ b/mc3.tex
@@ -672,7 +672,7 @@ converged better than those without \MCMCMC.
 
 We found that for the runs with simulated trees,
 the median log-likelihood values among treatments
-were virtually identical per replicate runs (Figure \ref{fig:median-log-like}a).
+were virtually identical per replicate runs (Figure~\ref{fig:median-log-like}a).
 %
 These results indicate that for simulated trees,
 the MCMC simulation found the same posterior probability distribution,
@@ -683,7 +683,7 @@ the mean median log-likelihood (and 95\% bootstrap confidence interval)
 with one chain was $-631.29$ ($-631.34$--$-631.25$),
 with four chains it was $-631.16$ ($-631.19$--$-631.12$),
 with eight chains it was $-631.12$ ($-631.15$--$-631.08$)
-(Figure \ref{fig:median-log-like}b).
+(Figure~\ref{fig:median-log-like}b).
 %
 These results indicate that the MCMC simulation
 reached a higher log-likelihood space
