Expand the caption of the median likelihood figure

--- a/mc3.tex
+++ b/mc3.tex
@@ -700,7 +700,11 @@ with \MCMCMC\ than without it.
     In (a), lines connect runs with the same simulated tree.
     In (b), the thick lines are the mean of the median log-likelihoods
     and the thin lines are the edges of the 95\% confidence intervals.
-    The gray circles are jittered horizontally for clarity.}
+    The gray circles are jittered horizontally for clarity.
+    For the simulated trees (a), the median log-likelihoods were the same
+    across treatments.
+    For the skink tree (b), the median log-likelihoods were greater
+    with 4 or 8 chains than with a single chain.}
 \label{fig:median-log-like}
 \end{figure}
 
